--- a/src/App.css
+++ b/src/App.css
@@ -100,10 +100,7 @@ bottom: 10px;
   padding: 15px;
   border-radius: 10px;
   overflow: hidden;
-
-  
-
-  transition:  0.4s  ease-in-out;
+ transition:  0.4s  ease;
   
 }
 
